avoid page break in AO3 viewed

--- a/templates-assets/styles/aar_accessible.css
+++ b/templates-assets/styles/aar_accessible.css
@@ -548,3 +548,7 @@ img.message-advantages_explanation {
 .icon-control {
     background-image: url("../images/control.jpg");
 }
+
+.avoid-page-break {
+  page-break-inside: avoid;
+}
