--- a/templates-assets/styles/style.css
+++ b/templates-assets/styles/style.css
@@ -147,3 +147,7 @@ h1 {
   }
 
 }
+
+.avoid-page-break {
+  page-break-inside: avoid;
+}
